# skynet

./: .gitignore  AI_Agent_Implementation_Plan.md  FUTURE-WORK.md  MSP_INTEGRATION.md  PROJECT_ASSESSMENT.md  README.md  check_imports.py  pytest.ini  requirements-msp.txt  requirements.txt  restart_clarityos.py
docs/concepts/: ai-assisted-development-part2.md  ai-assisted-development.md  ai-boot-system.md  ai-driven-os.md  ai-native-programming.md  maximizing-hardware-utilization.md  security-by-design.md  self-healing-system.md  universal-compatibility-android.md  universal-compatibility-apple.md  universal-compatibility-ios.md  universal-compatibility-linux.md  universal-compatibility-windows.md  universal-compatibility.md
docs/examples/: ai-code-testing-fixing.md  secure-apis.md  single-input-model.md
docs/implementation/: ai-os-implementation-plan.md  ai-os-technical-challenges.md  clarity_ai_native_features.md  clarity_language_implementation_plan.md  clarityos_implementation_roadmap.md  future-work-advanced-healing.md  future-work-ai-integration.md  future-work-areas.md  kernel-self-update.md  practical-implementation-steps.md  roadmap.md  strategic-roadmap.md
docs/msp-use-cases/: automated-monitoring.md  compliance-automation.md  msp-coding-patterns.md  multi-tenant-security.md
docs/principles/: code-organization.md
src/: README.md
src/clarity/: README.md  __init__.py  driver.py  test_driver.py
src/clarityos/clarity_os_kernel/: Cargo.toml
src/clarityos/clarity_os_kernel/src/: llm.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
(+162 files in other folders)
