[package]
name = "clarity_os_kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = { version = "0.9.33", features = ["map_physical_memory"] }
volatile = "0.2.6"
spin = "0.5.2"
uart_16550 = "0.2.0"
x86_64 = "0.14.2"
vectormatrix = { version = "0.1.2", default-features = false }

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
run-args = ["-serial", "stdio"]